14/privileged.yaml
apiVersion: v1
kind: Pod
metadata:
  name: privileged
spec:
  containers:
  - name: main
    image: public.ecr.aws/docker/library/alpine:latest 
    command: ["/bin/sleep", "999999"]
    securityContext:
      privileged: true
