14/settime.yaml
apiVersion: v1
kind: Pod
metadata:
  name: settime-capability
spec:
  containers:
  - name: main
    image: alpine
    command: ["/bin/sleep", "999999"]
    securityContext:
      capabilities:
        add:
        - SYS_TIME
