14/betatest-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: betatest-deny-all
  namespace: betatest
spec:
  podSelector: {}
  ingress: []
